fixes widget dimensions when large screen collapses to mobile

--- a/responsive_design/navigation/styles/styles.css
+++ b/responsive_design/navigation/styles/styles.css
@@ -121,6 +121,8 @@ header {
   }
   aside {
     width: 22%;
+    min-width: 200px;
+    margin-left: 1em;
   }
 }
 
